Aggiunti link dei gruppi + link per le faq

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -273,3 +273,11 @@ footer {
     color:#444;
   }
 }
+
+#faq .linkNotAvailable {
+  color:orangered;
+}
+
+#faq .linkAvailable {
+  color: greenyellow;
+}
