Aggiornate le informazioni sul sito web

--- a/site/stylesheets/styles.css
+++ b/site/stylesheets/styles.css
@@ -292,3 +292,11 @@ footer {
 #faq .linkAvailable a:hover {
   color:#248f48;
 }
+
+.important {
+  color: #890de0;
+}
+
+.important:hover {
+  color: #690aab;
+}
