--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,100 +1,25 @@
-body,
-html,
-#root {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
   background-color: #faf9f8;
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 100px; /* Footer height */
 }
 
-#root {
-  min-width: 630px;
-  -webkit-font-smoothing: antialiased;
-}
-
-/*------------
-    HEADER
-------------*/
-
-header {
-  position: sticky;
-  display: block;
-}
-
-#header-title {
-  color: #1e9ceb;
-  display: flex;
-  flex-direction: row; /* For working footer */
-  margin-top: 10px;
-  margin-bottom: 10px;
+.footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-}
-
-#header-menu {
-  position: sticky;
-  width: 100%;
-  display: flex;
-}
-
-/* End HEADER */
-
-#content {
-  flex: 1;
-  padding-top: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-#home-text {
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-#home-collegamenti {
-  justify-content: center;
-}
-
-#courses-text {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
-
-#faqProposer-text {
-  text-align: center;
-}
-
-#faqProposer-form,
-#faqProposer .ms-Stack {
-  text-align: center;
-  display: flex;
-}
-
-/*------------
-    FOOTER
-------------*/
-
-footer {
   background-color: #dddddd;
   /*background-color: lightblue;*/
-  width: 100%;
-  height: 20%;
-  position: sticky;
-  display: flex;
-  bottom: 0;
-  left: 0;
-  justify-content: center;
-  text-align: center;
+  height: 100px;
 }
 
-#footer-content {
-  margin-top: 15px;
-  margin-bottom: 15px;
+.header-title .row {
+  margin-right: 0px;
 }
-
-/* End FOOTER */
 
 /*------------
   Da sistemare
@@ -116,6 +41,7 @@ footer {
 
 #faqProposer .ms-Stack {
   justify-content: center;
+  display: flex;
 }
 
 .ms-ChoiceFieldGroup-flexContainer {
@@ -126,4 +52,9 @@ footer {
 .ms-Card {
   max-width: 400px;
   width: 270px;
+}
+
+.card {
+  background-color: #faf9f8;
+  border: none;
 }
