--- a/website/src/App.css
+++ b/website/src/App.css
@@ -25,6 +25,10 @@ body {
   Da sistemare
 ------------*/
 
+.ms-ChoiceField-labelWrapper {
+  overflow: visible;
+}
+
 .ms-List-cell {
   width: 50px;
   max-width: 50px;
