--- a/website/src/App.css
+++ b/website/src/App.css
@@ -29,28 +29,12 @@ body {
   overflow: visible;
 }
 
-.ms-List-cell {
-  width: 50px;
-  max-width: 50px;
-}
-
 .ms-Persona {
   margin-bottom: 12px;
 }
 
-.ms-FocusZone {
-  /* fa parte di header menu */
-  margin-left: 8px;
-}
-
 #home .ms-Icon {
-  /* Da vedere come cavolo impostarlo da home.tsx */
   font-size: 40px;
-}
-
-#faqProposer .ms-Stack {
-  justify-content: center;
-  display: flex;
 }
 
 .ms-ChoiceFieldGroup-flexContainer {
@@ -58,10 +42,12 @@ body {
   justify-content: center;
 }
 
+/*
 .ms-Card {
   max-width: 400px;
   width: 270px;
 }
+*/
 
 .card {
   background-color: #faf9f8;
