Little styles update

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -12,8 +12,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: #dddddd;
-  /*background-color: lightblue;*/
+  background-color:#cccccc;
   height: 170px;
 }
 
