--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,3 +1,23 @@
+/*
+html {
+  min-height: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  min-height: 100%;
+}
+
+body {
+  position:relative;
+  background-color: #faf9f8;
+  min-height: 100%;
+  height: 100%;
+  margin-bottom: 235px;
+}
+*/
 html {
   position: relative;
   min-height: 100%;
@@ -8,27 +28,42 @@ body {
   margin-bottom: 220px; /* Footer height */
 }
 
-.footer {
+#root {
+  min-height: 100%;
+}
+
+footer {
+  padding-top:20px;
+  padding-bottom:10px;
   position: absolute;
   bottom: 0;
   width: 100%;
   background-color:#cccccc;
-  height: 170px;
+  color: #000;
 }
 
-.header-title .row {
-  margin-right: 0px;
+main {
+  position: relative;
+  min-height: 100%;
 }
 
-.ms-Dropdown-title {
-  border-style: none;
-  background-color: #faf9f8;
-  height: 44px;
-  justify-content: center;
-  text-align: center;
+/* Responsive footer */
+@media only screen and (max-width: 990px) {
+  body {
+    margin-bottom: 310px;
+  }
 }
 
-/* Menù responsive */
+@media only screen and (max-width: 768px) {
+  body {
+    margin-bottom: 510px;
+  }
+  footer .row {
+    text-align: center;
+  }
+}
+
+/* Responsive menu */
 @media only screen and (min-width: 455px) {
   .pivot {
     display: block;
@@ -47,6 +82,7 @@ body {
     display: block;
   }
 }
+/* End responsive menu */
 
 /* Fix temporaneo FocusZone in CourseListView */
 @media only screen and (max-width: 766px) {
@@ -83,6 +119,22 @@ body {
   .ms-List {
     width: 232px;
   }
+}
+
+footer .row {
+  margin: 0;
+}
+
+.header-title .row {
+  margin-right: 0px;
+}
+
+.ms-Dropdown-title {
+  border-style: none;
+  background-color: #faf9f8;
+  height: 44px;
+  justify-content: center;
+  text-align: center;
 }
 
 /*------------
@@ -150,7 +202,7 @@ body {
 }
 
 .home .ms-Icon {
-  font-size: 40px;
+  font-size: 45px;
 }
 
 .ms-ChoiceFieldGroup-flexContainer {
@@ -158,14 +210,7 @@ body {
   justify-content: center;
 }
 
-/*
-.ms-Card {
-  max-width: 400px;
-  width: 270px;
-}
-*/
-
-.card {
+.home .card {
   background-color: #faf9f8;
   border: none;
 }
