Aggiunti cdl magistrali

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -138,11 +138,11 @@ footer .row {
 }
 
 .tutor {
-  color: #be5eeb;
+  color: #58c2e8;
 }
 
 .tutor:hover {
-  color: #7f3e9e;
+  color: #239fcc;
 }
 
 /*------------
