CourseItemView overhaul + upload corsi magistrale informatica

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -138,11 +138,11 @@ footer .row {
 }
 
 .tutor {
-  color: #58c2e8;
+  color: #f0a243;
 }
 
 .tutor:hover {
-  color: #239fcc;
+  color: #f06843;
 }
 
 /*------------
