Corsi magistrale Sicurezza Informatica + Some adjustments

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -218,6 +218,10 @@ footer .row {
   justify-content: center;
 }
 
+.ms-ChoiceField {
+  margin: 4px 4px 4px 4px;
+}
+
 .home .card {
   background-color: #faf9f8;
   border: none;
