--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,31 +1,21 @@
-/*
-html {
-  min-height: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#root {
-  min-height: 100%;
-}
-
+/* Old Settings
 body {
   position:relative;
-  background-color: #faf9f8;
   min-height: 100%;
   height: 100%;
-  margin-bottom: 235px;
 }
 */
+
 html {
+  margin: 0;
+  padding: 0;
   position: relative;
   min-height: 100%;
 }
 
 body {
   background-color: #faf9f8;
-  margin-bottom: 220px; /* Footer height */
+  margin-bottom: 220px; /* Default footer height */
 }
 
 #root {
@@ -60,6 +50,12 @@ main {
   }
   footer .row {
     text-align: center;
+  }
+}
+
+@media only screen and (max-width: 272px) {
+  body {
+    margin-bottom: 525px;
   }
 }
 /* End responsive footer */
