--- a/website/src/App.css
+++ b/website/src/App.css
@@ -101,7 +101,7 @@ footer .row {
   max-width: 600px;
 }
 
-.home .ms-Dropdown-title {
+.dropdown .ms-Dropdown-title {
   border-style: none;
   background-color: #faf9f8;
   height: 44px;
