--- a/website/src/App.css
+++ b/website/src/App.css
@@ -164,7 +164,7 @@ main {
   }
 }
 
-/* Faq_proposer form adjustments */
+/* Faq_proposer form and administrator section adjustments */
 @media only screen and (max-width: 575px) {
   .faq-proposer .col-xs-12 {
     max-width: 300px;
@@ -174,6 +174,11 @@ main {
   .courses-filter-options .row {
     margin-right:10%;
     margin-left:10%;
+  }
+
+  .administrators h6 {
+    margin-right:15%;
+    margin-left:15%;
   }
 }
 
