--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,11 +1,3 @@
-/* Old body settings
-body {
-  position:relative;
-  min-height: 100%;
-  height: 100%;
-}
-*/
-
 html {
   margin: 0;
   padding: 0;
@@ -176,13 +168,21 @@ main {
     margin-left:10%;
   }
 
-  .administrators h6 {
+  .administrators .title {
     margin-right:15%;
     margin-left:15%;
   }
 
 }
 /* End Faq_proposer form and other section adjustments */
+
+
+
+
+
+
+
+
 
 .materials .col-lg-3 {
   max-width:250px;
@@ -236,6 +236,9 @@ main {
     top: -40px;
     right: 0px;
   }
+  .ms-TeachingBubble {
+    max-width:300px;
+  }
 }
 
 @media only screen and (min-width: 479px) {
@@ -243,14 +246,27 @@ main {
     top: 0px;
     right: 0px;
   }
+  .ms-TeachingBubble {
+    max-width:400px;
+  }
 }
 
+.ms-TeachingBubble button {
+  outline: none;
+  border-radius:5px;
+}
 
-/*
+/* Da sistemare meglio */
 .ms-Dialog-title {
-  margin-right: -2%;
+  margin-right: -1%;
 }
-*/
+
+
+
+
+
+
+
 
 /*------------
   Da sistemare
@@ -334,10 +350,19 @@ main {
   margin-left: 5px;
 }
 
+.rules .card:active, .rules .card:focus {
+  outline: 0;
+  border: none;
+  outline: none;
+  box-shadow: none !important;
+}
+
 a:active,
 a:focus,
 .home button:active,
-.home button:focus {
+.home button:focus,
+.rules button:active,
+.rules button:focus {
   outline: 0;
   border: none;
   outline: none;
@@ -348,14 +373,6 @@ a:focus,
 .faq-proposer button:focus,
 .faq-proposer button:active {
   outline: none;
-}
-
-.rules button:focus,
-.rules button:active {
-  outline: none;
-  border: none;
-  outline: 0;
-  box-shadow: none !important;
 }
 
 .faq-view-link:active,
