--- a/website/src/App.css
+++ b/website/src/App.css
@@ -256,10 +256,10 @@ main {
   border-radius:5px;
 }
 
-/* Da sistemare meglio */
+/* Da sistemare meglio 
 .ms-Dialog-title {
   margin-right: -1%;
-}
+}*/
 
 
 
