--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Main properties */
+
 html {
   margin: 0;
   padding: 0;
@@ -84,8 +86,7 @@ main {
     display: none;
   }
 
-  /* Header menu left margin on large displays */
-  .header-menu .ms-FocusZone {
+  .header-menu .ms-FocusZone {  /* Header menu left margin on large displays */
     margin-left: 10px;
   }
 }
@@ -123,7 +124,8 @@ main {
     margin-left:-5%;
   }
 }
-/* End responsive menu */
+/* End responsive menu and title */
+
 
 
 /* Dropdown style for header-menu */
@@ -134,6 +136,7 @@ main {
   justify-content: center;
   text-align: center;
 }
+
 
 /* Grid system adjustments for filter container */
 @media only screen and (max-width: 540px) {
@@ -155,13 +158,8 @@ main {
   }
 }
 
-/* Faq_proposer form and other section adjustments */
+/* Section adjustments */
 @media only screen and (max-width: 575px) {
-  .faq-proposer .col-xs-12 {
-    max-width: 300px;
-    text-align: center;
-  }
-  
   .courses-filter-options .row {
     margin-right:10%;
     margin-left:10%;
@@ -181,7 +179,9 @@ main {
 
 
 
-
+/*------------
+  Da sistemare
+------------*/
 
 .materials .col-lg-3 {
   max-width:250px;
@@ -255,76 +255,8 @@ main {
   border-radius:5px;
 }
 
-/* Da sistemare meglio 
-.ms-Dialog-title {
-  margin-right: -1%;
-}*/
-
-
-
-
-
-
-
-
-/*------------
-  Da sistemare
-------------*/
-
 .services .ms-DocumentCardTitle {
   overflow: visible;
-}
-
-.faq-proposer select {
-  width: 100%;
-  box-shadow: none;
-  margin: 0px;
-  padding: 0px 28px 0px 8px;
-  box-sizing: border-box;
-  background-color: rgb(255, 255, 255);
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(96, 94, 92);
-  border-radius: 2px;
-  cursor: pointer;
-  display: block;
-  height: 32px;
-  line-height: 30px;
-  position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  color: rgb(96, 94, 92);
-  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI",
-    -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.faq-proposer option {
-  box-shadow: none;
-  margin: 0px;
-  padding: 0px 28px 0px 8px;
-  box-sizing: border-box;
-  background-color: rgb(255, 255, 255);
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(96, 94, 92);
-  border-radius: 2px;
-  cursor: pointer;
-  display: block;
-  height: 32px;
-  line-height: 30px;
-  position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI",
-    -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  font-size: 14px;
-  font-weight: 400;
 }
 
 .ms-ChoiceField-labelWrapper {
@@ -372,9 +304,7 @@ a:focus,
   box-shadow: none !important;
 }
 
-.ms-Dialog-main .ms-Button,
-.faq-proposer button:focus,
-.faq-proposer button:active {
+.ms-Dialog-main .ms-Button {
   outline: none;
 }
 
